# c-roblib

./: .gitignore  AI_RULES.md  CHANGELOG.md  CMakeLists.txt  README.md  library.h  project_info.txt
docs/: gtest_naming.txt  json_parser.MD  json_parser_notes.txt
include/: arena.h  array_list.h  dev_utils.h  error_result.h  json_parser.h  ref_objects.h  roblib_all.h  set.h  string_counter.h
include/roblib/: arena.h  array_list.h  base.h  bitset.h  collections.h  cpp_helper.h  error_result.h  hashmap.h  json_parser.h  roblib_all.h  roblib_types.h  string_buffer.h  string_builder.h  string_utils.h  unicode_tools.h  version.h
src/: all_tests.c  assert.h  base_test.c  collections.c  collections.h  dev_utils.c  primes.h  psytest.c  psytest.h  punit.c  punit.h  ref_objects.c  ref_objects.h  string_buffer.c  string_buffer.h  string_utils.h  string_utils_utf8.c  string_utils_utf8.h  test_main.c  test_unit.c  testing_utils.h  unit.c  unit.h
src/array/: array.c  array.h  array_template.h  array_template.inc  array_test.c  array_types.c  array_types.h
src/carray/: carray.c  carray.h  carray_template.h  carray_template.inc  carray_types.c  carray_types.h
src/carray/test/: carray_test.c  test_carray_types.c
src/file_io/: file_utils.c  file_utils.h
src/json_parser/: arena.c  arena.h  error_result.c  error_result.h  json_parser.c  json_parser.h  json_parser_2.c  lookup_table.c  lookup_table.h
src/list/: array_list.c  array_list.h  test_array_list.c
src/map/: hashmap.c  hashmap.h  hashmap_private.h  powers_of_two  powers_of_two.c  return_anon_structs.c  runlog.txt  string_counter.c  test_hashmap.c  test_hashmap2.c  test_string_counter.c
src/memory/: memory_pool.c  memory_pool.h
src/munit/: memory_check.c  memory_check.h  munit_overrides.h
src/set/: bitset.c  bitset.h  bitset_dynamic.c  set.c  set.h  test_set.c
src/string/: string_buffer.c  string_buffer.h  string_builder.c  string_builder.h  string_utils.c  string_utils_utf8.c  test_string_utils.c
src/tests/: test_string_utils.c
src/toml_parser/: toml_parser.c  toml_parser.h
src/unicode/: unicode_tools.c
src/vector/: vec_template.h  vec_template.inc  vector.c  vector.h  vector_test.c  vector_types.c  vector_types.h
test/: test_main.cpp  test_runner.cpp
test/json_parser/: test_JSONTestSuite.cpp  test_json_parser.cpp  test_json_parser.h
test/json_parser/error_reporting/: error_reporting_tests.txt  test_error_reporting.cpp
